docs Added images to the repo

--- a/src/pages/episodes/episode.module.scss
+++ b/src/pages/episodes/episode.module.scss
@@ -1,7 +1,13 @@
+@import '../../styles/global.mixins.scss';
+
 .episode {
   margin: 0 auto;
   max-width: 45rem;
   padding: 3rem 2rem;
+
+  @include smDown {
+    padding: 3rem 2rem 8rem 2rem;
+  }
 
   .description {
     color: var(--anchor-color);
